style adjustments and refactor to tailwind classes

--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -18,6 +18,8 @@
 html {
   font-family: 'Inter', 'Helvetica', 'Arial', sans-serif;
   font-weight: 400;
+  background: $background;
+  color: $white;
 }
 
 @supports (font-variation-settings: normal) {
