--- a/resources/assets/scss/pages/home.scss
+++ b/resources/assets/scss/pages/home.scss
@@ -1,9 +1,5 @@
 #body-home {
-  background: $color-1;
-  color: $color-2;
-
   header {
-    @apply relative;
     @apply bg-right-bottom;
     @apply bg-cover;
     @apply bg-no-repeat;
@@ -12,7 +8,7 @@
 
     &::before {
       content: '';
-      background: linear-gradient(0deg, $color-1 0%, rgba($color-1, 0) 100%);
+      background: linear-gradient(0deg, $background 0%, rgba($background, 0) 100%);
       height: 100%;
       @apply absolute;
       @apply bottom-0;
@@ -20,70 +16,17 @@
     }
 
     > div {
-      @apply relative;
-      @apply z-10;
-      @apply inset-0;
-
-      nav {
-        > div.container {
-          @apply flex;
-          @apply items-center;
-        }
-
-        h1 {
-          @apply text-2xl;
-          @apply leading-none;
-          @apply tracking-wider;
-          @apply py-4;
-          @apply flex-grow;
-          @apply flex;
-          @apply items-center;
-          color: $white;
-          font-weight: 600;
-
-          i {
-            @apply text-4xl;
-            @apply mr-2;
-          }
-
-          span {
-            @apply py-2;
-          }
-        }
-
-        ul {
-          @apply flex;
-
-          > li {
-            + li {
-              @apply ml-4;
-            }
-          }
-        }
-      }
-
-      .lead {
-        @apply text-center;
-        @apply py-64;
-
+      > div {
         > strong {
-          @apply text-4xl;
-          color: $white;
-          font-weight: 700;
-
           span {
             + span {
               &::before {
                 content: ' / ';
-                color: $color-2;
+                color: $white;
                 @apply opacity-50;
               }
             }
           }
-        }
-
-        > div {
-          @apply pt-32;
         }
       }
     }
