use local inter font

--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -1,4 +1,4 @@
-@import url('https://rsms.me/inter/inter.css');
+@import "~typeface-inter/inter";
 
 //@import "~@fortawesome/fontawesome-pro/scss/light";
 //@import "~@fortawesome/fontawesome-pro/scss/regular";
