--- a/resources/assets/scss/pages/home.scss
+++ b/resources/assets/scss/pages/home.scss
@@ -1,29 +1,29 @@
 #body-home {
   header {
-    @apply bg-right-bottom;
-    @apply bg-cover;
     @apply bg-no-repeat;
-    background-image: url('../../img/hero.min.jpg');
+    background-image: url('../../img/hero_comets.svg');
+    @apply bg-no-repeat;
+    @apply bg-cover;
+    background-position-x: center;
+    background-position-y: -50vh;
 
     &::before {
       content: '';
-      background: linear-gradient(0deg, $background 0%, rgba($background, 0) 100%);
       height: 100%;
+      z-index: -1;
+      background-image: url('../../img/hero_background.min.jpg');
       @apply absolute;
-      @apply bottom-0;
-      @apply inset-x-0;
+      @apply inset-0;
+      @apply bg-no-repeat;
+      @apply bg-right-bottom;
+      @apply bg-cover;
     }
-  }
-}
 
-.divided {
-  > * {
-    + * {
-      &::before {
-        content: ' / ';
-        color: $white;
-        @apply opacity-50;
-      }
+    &::after {
+      content: '';
+      background: linear-gradient(0deg, $background 0%, rgba($background, 0) 100%);
+      @apply absolute;
+      @apply inset-0;
     }
   }
 }
