add remaining packages add contributors

--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -81,3 +81,15 @@ a.btn {
     }
   }
 }
+
+.bg-background-lighter {
+  background: lighten($background, 7.5%);
+}
+
+.text-background {
+  color: $background;
+}
+
+.bg-background {
+  background: $background;
+}
