--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -1,23 +1,25 @@
 //@import "~typeface-inter/inter";
 @font-face {
     font-family: 'Inter';
-    font-style:  normal;
+    font-style: normal;
     font-weight: 400;
     font-display: swap;
     src: url("~typeface-inter/Inter (web)/Inter-Regular.woff2") format("woff2"),
     url("~typeface-inter/Inter (web)/Inter-Regular.woff") format("woff");
 }
+
 @font-face {
     font-family: 'Inter';
-    font-style:  normal;
+    font-style: normal;
     font-weight: 600;
     font-display: swap;
     src: url("~typeface-inter/Inter (web)/Inter-SemiBold.woff2") format("woff2"),
     url("~typeface-inter/Inter (web)/Inter-SemiBold.woff") format("woff");
 }
+
 @font-face {
     font-family: 'Inter';
-    font-style:  normal;
+    font-style: normal;
     font-weight: 700;
     font-display: swap;
     src: url("~typeface-inter/Inter (web)/Inter-Bold.woff2") format("woff2"),
@@ -37,59 +39,69 @@
 
 @import "variables";
 
+@mixin translate-y {
+    transition: all ease 0.25s;
+
+    &:hover {
+        transform: translateY(0.25rem);
+    }
+}
+
 html {
-  font-family: 'Inter', 'Helvetica', 'Arial', sans-serif;
-  font-weight: 400;
-  background: $background;
-  color: $white;
+    font-family: 'Inter', 'Helvetica', 'Arial', sans-serif;
+    font-weight: 400;
+    background: $background;
+    color: $white;
 }
 
 :root {
-  --fa-primary-color: #{$white};
-  --fa-secondary-color: #{$color-2};
+    --fa-primary-color: #{$white};
+    --fa-secondary-color: #{$color-2};
 }
 
 a.btn {
-  @apply relative;
-  @apply block;
-  @apply rounded;
-  @apply py-2;
-  @apply px-4;
-  color: $color-3;
-  background-color: $white;
-  transition: all ease 0.25s;
-
-
-  &:hover {
-    @apply border-0;
+    @include translate-y;
+    @apply relative;
+    @apply block;
+    @apply rounded;
+    @apply py-2;
+    @apply px-4;
     color: $color-3;
     background-color: $white;
-    transform: translateY(2px);
-  }
+
+    &:hover {
+        @apply border-0;
+        color: $color-3;
+        background-color: $white;
+    }
+}
+
+a.translate {
+    @include translate-y;
 }
 
 .divided {
-  > * {
-    + * {
-      &::before {
-        content: ' / ';
-        color: $white;
-        @apply opacity-50;
-      }
+    > * {
+        + * {
+            &::before {
+                content: ' / ';
+                color: $white;
+                @apply opacity-50;
+            }
+        }
     }
-  }
 }
 
 .bg-background-lighter {
-  background: lighten($background, 7.5%);
+    background: lighten($background, 7.5%);
 }
 
 .text-background {
-  color: $background;
+    color: $background;
 }
 
 .bg-background {
-  background: $background;
+    background: $background;
 }
 
 header.hero {
