--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -27,7 +27,7 @@
 }
 
 //@import "~@fortawesome/fontawesome-pro/scss/light";
-//@import "~@fortawesome/fontawesome-pro/scss/regular";
+@import "~@fortawesome/fontawesome-pro/scss/regular";
 @import "~@fortawesome/fontawesome-pro/scss/solid";
 @import "~@fortawesome/fontawesome-pro/scss/duotone";
 @import "~@fortawesome/fontawesome-pro/scss/brands";
